--- a/.github/workflows/python-coverage.yml
+++ b/.github/workflows/python-coverage.yml
@@ -21,6 +21,7 @@ jobs:
         pip install pytest
         pip install pytest-cov
         if [ -f python/requirements.txt ]; then pip install -r python/requirements.txt; fi
+        if [ -f python/test_requirements.txt ]; then pip install -r python/test_requirements.txt; fi
         pytest --cov=./python/scidatacontainer --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
